force-app/main/default/objects/Invoice__c/fields/ADDR1__c.field-meta.xml
<CustomField>
    <fullName>ADDR1__c</fullName>
    <label>ADDR1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>