force-app/main/default/objects/Invoice__c/fields/ADDR2__c.field-meta.xml
<CustomField>
    <fullName>ADDR2__c</fullName>
    <label>ADDR2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>