force-app/main/default/objects/Invoice__c/fields/ADDR3__c.field-meta.xml
<CustomField>
    <fullName>ADDR3__c</fullName>
    <label>ADDR3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>