force-app/main/default/objects/Invoice__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <formula>Order__r.Account.AccountNumber</formula>
    <label>Bill To</label>
    <type>Text</type>
</CustomField>