force-app/main/default/objects/Invoice__c/fields/Billing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Billing_Unit__c</fullName>
    <label>Billing Unit</label>
    <length>4</length>
    <type>Text</type>
</CustomField>