force-app/main/default/objects/Invoice__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>Order__r.ShippingCity</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>