force-app/main/default/objects/Invoice__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>Order__r.ShippingCountry</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>