force-app/main/default/objects/Invoice__c/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <label>Customer PO</label>
    <length>35</length>
    <type>Text</type>
</CustomField>