force-app/main/default/objects/Invoice__c/fields/Invoice_Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Territory_ID__c</fullName>
    <label>Invoice Territory ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>