force-app/main/default/objects/Invoice__c/fields/Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>Pay_Type__c</fullName>
    <label>Pay Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>DI</fullName>
            </value>
            <value>
                <fullName>VI</fullName>
            </value>
            <value>
                <fullName>SCO</fullName>
            </value>
            <value>
                <fullName>SCP</fullName>
            </value>
            <value>
                <fullName>MC</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>SMC</fullName>
            </value>
            <value>
                <fullName>CPRO</fullName>
            </value>
            <value>
                <fullName>COM1</fullName>
            </value>
            <value>
                <fullName>AMEX</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>CHCK</fullName>
            </value>
            <value>
                <fullName>CASH</fullName>
            </value>
            <value>
                <fullName>WIRE</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>INTL</fullName>
            </value>
            <value>
                <fullName>VISA</fullName>
            </value>
            <value>
                <fullName>ECHK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>