force-app/main/default/objects/Invoice__c/fields/Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Rep_Name__c</fullName>
    <label>Rep Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>