force-app/main/default/objects/Invoice__c/fields/Ship_to_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Name__c</fullName>
    <label>Ship to Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>