force-app/main/default/objects/Invoice__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>Order__r.ShippingState</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>