force-app/main/default/objects/Invoice__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <formula>Order__r.ShippingPostalCode</formula>
    <label>Zip</label>
    <type>Text</type>
</CustomField>